@@ -3,6 +3,7 @@
 
 Win32API
 bigdecimal
+cgi/escape
 #dbm
 digest
 digest/md5
