@@ -1,0 +1,3 @@
+require 'mkmf'
+
+create_makefile 'cgi/escape'
